--- a/packages/layout/src/styles/index.css
+++ b/packages/layout/src/styles/index.css
@@ -1,3 +1,42 @@
 .lucide-icon{
     stroke-width: 1;
 }
+
+magic-layout[size=small]{ 
+    --ml-font-size: var(--sl-font-size-small);    
+    --ml-spacing: var(--sl-spacing-small);                    /* 用于内边距和外边距 */
+    --ml-border-radius: var(--sl-border-radius-small);
+    --ml-shadow: var(--sl-shadow-small);    
+}
+
+magic-layout,magic-layout[size=medium]{
+    --ml-text-color: var(--sl-color-gray-700);    
+    --ml-gray-color: var(--sl-color-gray-500);    
+    --ml-bgcolor: var(--sl-color-neutral-0);    
+    --ml-font-size: var(--sl-font-size-medium);    
+    --ml-spacing: var(--sl-spacing-medium);                    /* 用于内边距和外边距 */
+    --ml-border-color: var(--sl-color-neutral-300);
+    --ml-border: 1px solid var(--ml-border-color);    
+    --ml-border-radius: var(--sl-border-radius-medium);
+    --ml-shadow: var(--sl-shadow-medium);    
+    auto-box{
+        padding: var(--ml-spacing);
+        font-size: var(--ml-font-size);
+        border-radius: var(--ml-border-radius);
+        box-shadow: var(--ml-shadow);
+        color: var(--ml-text-color);
+    }
+}
+
+magic-layout[size=large]{ 
+    --ml-font-size: var(--sl-font-size-large);    
+    --ml-spacing: var(--sl-spacing-large);                    /* 用于内边距和外边距 */
+    --ml-border-radius: var(--sl-border-radius-large);
+    --ml-shadow: var(--sl-shadow-large);    
+} 
+
+magic-layout.error{
+    --ml-border: 1px solid red;
+    --ml-text-color: red; 
+    
+}
