--- a/packages/layout/index.html
+++ b/packages/layout/index.html
@@ -6,8 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MagicLayout</title>
         <link rel="stylesheet" href="./index.css" />
-        <link rel="stylesheet" href="./src/themes/dark.css" /> 
-        <link rel="stylesheet" href="./src/themes/light.css" /> 
+        <link rel="stylesheet" href="./node_modules/themepro/dist/dark.css" /> 
+        <link rel="stylesheet" href="./node_modules/themepro/dist/blue.css" /> 
+        <link rel="stylesheet" href="./node_modules/themepro/dist/red.css" /> 
+        
         <script type="module" src="./src/index.ts"></script> 
         <script type="module" src="./examples"></script>
         <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.1/cdn/themes/light.css"/> -->
